# pgl_utils

./: .flake8  .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  PROJECT_STRUCTURE.md  README.md  STUDENT_README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish-to-pypi.yml  tests.yml
docs/: ARCHITECTURE.md  CI_CD_SETUP.md  GETTING_STARTED.md  INSTALLATION_GUIDE.md  animation.html  game.html  gan_funcoes.html  index.html
examples/: example_basic.py  example_pytorch_mlflow.py
mlruns/0/: meta.yaml
mlruns/539956917480412595/: meta.yaml
pgl_utils/: __init__.py
pgl_utils/core/: __init__.py  utils.py
pgl_utils/deep_learning/: __init__.py  architectures.py  requirements.txt  training.py
pgl_utils/dl/: __init__.py  architectures.py
pgl_utils/genai/: __init__.py  financial_plots.py  llm.py  rag.py
pgl_utils/ibmec/: __init__.py  config.py
pgl_utils/ml/: __init__.py  models.py  preprocessing.py
pgl_utils/mlops/: __init__.py
pgl_utils/mlops/experiments/: __init__.py  base_tracker.py  mlflow_tracker.py
pgl_utils/puc/: __init__.py  config.py
pgl_utils/tests/: test_base_tracker.py  test_financial_plots.py  test_mlflow_tracker.py
tests/: __init__.py  test_base_tracker.py  test_core.py  test_financial_plots.py  test_mlflow_tracker.py
