[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pgl-utils"
version = "0.1.0"
description = "Machine Learning, Deep Learning, and GenAI utilities for PUC and IBMEC post-graduation students"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = ["machine-learning", "deep-learning", "generative-ai", "utilities"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "black>=22.0",
    # "flake8>=4.0",  # Desabilitado - tinalização automática pode quebra o projeto
    "mypy>=0.950",
]

ml = [
    "scikit-learn>=1.0.0",
    "xgboost>=1.5.0",
    "lightgbm>=3.3.0",
]

dl = [
    "torch>=1.10.0",
    "tensorflow>=2.8.0",
    "keras>=2.8.0",
]

genai = [
    "openai>=0.27.0",
    "langchain>=0.0.100",
    "huggingface-hub>=0.12.0",
]

all = [
    "torch>=1.10.0",
    "tensorflow>=2.8.0",
    "keras>=2.8.0",
    "openai>=0.27.0",
    "langchain>=0.0.100",
    "huggingface-hub>=0.12.0",
    "scikit-learn>=1.0.0",
    "xgboost>=1.5.0",
    "lightgbm>=3.3.0",
]

[project.urls]
Homepage = "https://github.com/renansantosmendes/pgl_utils"
Repository = "https://github.com/renansantosmendes/pgl_utils.git"
Issues = "https://github.com/renansantosmendes/pgl_utils/issues"


